@@ -346,7 +346,7 @@ sp_xml_tree_dialog (void)
 		gtk_box_pack_start (GTK_BOX (box2), set_attr, FALSE, FALSE, 0);
 
 		sw = gtk_scrolled_window_new (NULL, NULL);
-		gtk_scrolled_window_set_policy (GTK_SCROLLED_WINDOW (sw), GTK_POLICY_NEVER, GTK_POLICY_AUTOMATIC);
+		gtk_scrolled_window_set_policy (GTK_SCROLLED_WINDOW (sw), GTK_POLICY_AUTOMATIC, GTK_POLICY_AUTOMATIC);
 		gtk_box_pack_start (GTK_BOX (toolbar), sw, TRUE, TRUE, 0);
 
 		attr_value = (GtkTextView *) gtk_text_view_new ();
@@ -357,7 +357,7 @@ sp_xml_tree_dialog (void)
 		gtk_text_view_set_editable (attr_value, TRUE);
 		gtk_container_add (GTK_CONTAINER (sw), GTK_WIDGET (attr_value));
 
-		gtk_paned_pack2 (GTK_PANED(attr_subpaned_container), GTK_WIDGET (toolbar), FALSE, TRUE);
+		gtk_paned_pack2 (GTK_PANED (attr_subpaned_container), GTK_WIDGET (toolbar), FALSE, TRUE);
 
 		/* text */
 
