@@ -1,5 +1,8 @@
 2003-01-25  Lauris Kaplinski  <lauris@kaplinski.com>
 
+	* src/dialogs/xml-tree.c (sp_xml_tree_dialog): Allow horizontal scrollbar
+	so we do not expand window infinitely
+
 	* src/sp-use.c (sp_use_update): Implemented by MenTaLguY
 	(sp_use_modified): Ditto
 
